--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="row" style="color: black">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Why We Chose a Destination Wedding</h2>
-                                   <h3>For the Love of Travel</h3> 
+                                   <h3>For the Love of Travel</h3>
 <p><i>"Whitefish is a resort town in the Rocky Mountains of northwest Montana. It’s a gateway to the jagged peaks, lakes and glacier-carved valleys of Glacier National Park. Home to bighorn sheep, mountain goats, grizzly bears, golden eagles, Canadian lynx, wolverines, and many other beasts and birds, Glacier National Park is 16,000 square miles of mountains, meadows and lakes on the Continental Divide, a breathtaking landscape so remote it is sometimes lonely even in our crowded age."</i></p>
 
 <p>Ever since Brandon and I traveled to Montana in May 2017, we knew we wanted to see more mountains and wildlife. We visited a lot of different cities in our travels together, but nothing compared to the excitement of experiencing bears, bighorn sheep, coyote, and other wild animals in their natural habitat when visiting Yellowstone National Park. Not to mention the gorgeous backdrop. Glacier National Park was added to our bucket list shortly after that trip.</p>
@@ -204,7 +204,7 @@
 
     <!-- RSVP Section -->
     <section id="accommodations" class="content-section text-center">
-      <div class="rsvp-section">
+      <div class="download-section">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
