--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 
 
     <!-- RSVP Section -->
-    <section id="accommodations" class="content-section text-center">
-      <div class="download-section">
+    <section id="RSVP" class="content-section text-center">
+      <div class="rsvp-section">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
