--- a/index.html
+++ b/index.html
@@ -204,9 +204,12 @@
 
     <!-- RSVP Section -->
     <section id="RSVP" class="content-section text-center rsvp-section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
+      <section id="weddingdetails" class="content-section text-center">
+          <div class="download-section">
+              <div class="container">
+
+                <div class="row">
+                  <div class="col-md-12">
                 <h2>RSVP</h2>
                 Use the below form to send an email to Allison and Brandon and RSVP for the wedding.
                 <br><br>
@@ -217,6 +220,7 @@
 </form>
 </div>
 </div>  <!-- end of row -->
+</div>
 </div>
 </section>
 
