--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
 
 
     <!-- RSVP Section -->
-    <section id="accommodations" class="content-section text-center">
-      <div class="rsvp-section">
+    <section id="accommodations" class="content-section text-center rsvp-section">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -218,7 +217,6 @@
 </form>
 </div>
 </div>  <!-- end of row -->
-</div>
 </div>
 </section>
 
