--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h3>Date and Time</h3>
                     <p>Friday, August 30, 2019
                     <br>5:30 PM Mountain Time</p>
-                    <h3>Location</h3> 
+                    <h3>Location</h3>
                     <p><b>WHITEFISH MOUNTAIN RESORT</b>
                     <br>1015 Glades Dr, Whitefish, MT 59937, USA
                     <br><br>The ceremony and reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided (see more under <i>lodging</i>).
@@ -211,7 +211,8 @@
                 Use the below form to send an email to Allison and Brandon and RSVP for the wedding.
                 <br><br>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
-  <p>Your email address: <input type="email" name="email" style="color: black">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Total number of guests: <input type="number" min="1" max="5" name="number" style="color: black">
+  <p>Your email address: <input type="email" name="email" style="color: black">
+    <br><br>Total number of guests: <input type="number" min="1" max="5" name="number" style="color: black">
   <br><br>Name of each guest (including you!): <br><textarea name="message" style="color: black;width: 240px"></textarea>
   <br><br><button type="submit" class="button">SEND</button>
 </form>
