--- a/index.html
+++ b/index.html
@@ -203,22 +203,21 @@
 
 
     <!-- RSVP Section -->
-    <section id="accommodations" class="content-section text-center rsvp-section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <h2>RSVP TEST</h2>
+    <section id="RSVP" class="text-center">
+        <div class="rsvp-section content-section">
+            <div class="container">
+                <h2>RSVP</h2>
                 Use the below form to send an email to Allison and Brandon and RSVP for the wedding.
                 <br><br>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
-  <p>Your email address: <input type="email" name="email" style="color: black">
-    <br><br>Total number of guests: <input type="number" min="1" max="5" name="number" style="color: black">
-  <br><br>Name of each guest (including you!): <br><textarea name="message" style="color: black;width: 240px"></textarea>
+  <p><i>Your email address<br><input type="email" name="email" style="color: black">
+    <br><br>Total number of guests<br><input type="number" min="1" max="5" name="number" style="color: black">
+  <br><br>Name of each guest (including you!)</i><br><textarea name="message" style="color: black;width: 240px"></textarea>
   <br><br><button type="submit" class="button">SEND</button>
 </form>
+If you have any questions about the wedding, feel free to send us an email at <a href="mailto:allisonebrandon@gmail.com">allisonebrandon@gmail.com</a>.
 </div>
 </div>  <!-- end of row -->
-</div>
 </section>
 
 <!-- Accomodations Section -->
@@ -255,7 +254,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center" style="color: black">
-            <p>Copyright &copy; Brandon Wexler</p>
+            <p>Copyright &copy; Brandon Wexler. Email me at <a href="mailto:bmwexler@gmail.com">bmwexler@gmail.com</a>.</p>
         </div>
     </footer>
 
