--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </section>
 
 <!-- Why a Destination Wedding -->
-    <section id="destination" class="container content-section text-center">
+    <section id="destinationwedding" class="container content-section text-center">
         <div class="row" style="color: black">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Why We Chose a Destination Wedding</h2>
