--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <a class="page-scroll" href="#RSVP">RSVP</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Accomodations">Accomodations</a>
+                        <a class="page-scroll" href="#Accommodations">Accomodations</a>
                     </li>
                 </ul>
             </div>
@@ -224,7 +224,7 @@ If you have any questions about the wedding, feel free to send us an email at <a
     <section id="accommodations" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2" style="color: black">
-<h1>Accomodations</h1>
+<h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
 <p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
 <p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
