--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <style>
 .button {
-  background-color: #7ec5b7;
+  background-color: #7d8774;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding-left: 10px;
   padding-right: 10px;
@@ -75,7 +75,7 @@
                         <a class="page-scroll" href="#RSVP">RSVP</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Accommodations">Accomodations</a>
+                        <a class="page-scroll" href="#Accommodations">Accommodations</a>
                     </li>
                 </ul>
             </div>
@@ -92,7 +92,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2 class="brand-heading">Allison & Brandon</h2>
                         <p class="intro-text">August 30th, 2019
-                            <br>Whitefish Mountain Resort</p>
+                            <br>Whitefish, Montana</p>
                         <a href="#ourstory" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -109,12 +109,12 @@
                 <img src="img/mountaingoat.png" width="140" height="112">
                 <br>
                 <font color="black"><h2>Our Story</h2>
-                <h3>Athens Proposal</h3>
-                <p>In September 2017 on a family trip to Greece, Brandon proposed on our rooftop garden overlooking Acropolis in front of family.</p>
                 <h3>How We Met</h3>
                 <p>We met via match.com in October of 2014. On our first date, we realized our paths had crossed before: When we were teenagers, Brandon managed the Quizno's directly across the street from my neighborhood, and I remembered seeing him there on the weekends, reading the newspaper. We grew up very near each other, and, to add to the coincidences, we still did: Brandon lived in a condo just one street over from my apartment.</p>
                 <h3>Travels</h3>
                 <p>When I met Brandon, he told me his personal goal was to travel internationally at least once per year. He was looking for a partner to share in these adventures with. I was more than willing!</p>
+                <h3>Athens Proposal</h3>
+                <p>In September 2017,  Brandon proposed on our rooftop garden overlooking Acropolis.</p>
 
                 <p>In March 2015 we had our first adventure together to New York, NY. Following New York was a trip to Antigua for Brandon's father's wedding, then Kansas City, MO for a 90's concert, and capped the year off with a Thanksgiving trip to San Francisco.</p>
 
@@ -132,46 +132,21 @@
     <section id="weddingdetails" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-
               <div class="row">
                 <div class="col-md-12">
                     <h2>Wedding Details</h2>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-md-4">
                     <h3>Date and Time</h3>
                     <p>Friday, August 30, 2019
                     <br>5:30 PM Mountain Time</p>
                     <h3>Location</h3>
                     <p><b>WHITEFISH MOUNTAIN RESORT</b>
                     <br>1015 Glades Dr, Whitefish, MT 59937, USA
-                    <br><br>The ceremony and reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided (see more under <i>lodging</i>).
-                    <br<br>Guests will arrive by chairlift or enclosed gondola to the ceremony at the summit. The reception to follow at Base Lodge.</p>
+                    <br><br>Guests will arrive by chairlift or enclosed gondola to the mountaintop ceremony at Whitefish Mountain Resort's summit, which offers views of the entire Flathead Valley. Indoor reception to follow at Base Lodge.
+                    <br><br>We invite you to be fully present with us during our ceremony and ask that you please turn off all cell phones and cameras.
                 </div>
-
-                <div class="col-md-4">
-                  <h3>Lodging</h3>
-                  <b>WHITEFISH MOUNTAIN RESORT</b>
-                  <br>1015 Glades Dr, Whitefish, MT 59937, USA
-                  <br>800-858-4152
-                  <br><br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the vacation planners can assist you, whether you’ve decided on a specific property or building or would like for them to discuss some options with you.  Mention the promo code <i>BrandonWexler</i> to receive 15% off or you may  book on-line by visiting skiwhitefish.com and entering the same promo code.
-                    <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodges.
-
-</div>
-<div class="col-md-4">
-                    <h3>Transportation</h3>
-                      <p><b>GLACIER PARK EXPRESS</b><br>
-                        Glacier Park Express provides service between Whitefish Mountain Resort, the town of Whitefish, and Glacier National Park. Trips between Whitefish and Whitefish Mountain Resort are free. Trips to Glacier Park are $10 per person or $5 for kids
-                      <br><br><b>WHITEFISH MOUNTAIN RESORT VILLAGE SHUTTLE</b><br>
-                        Complimentary to Whitefish Mountain Resort Lodging guests to various locations around the resort. This shuttle does not go into the town of Whitefish.</p>
-                </div>
-
+              </div>
             </div>
-
         </div>
-      </div>
     </section>
 
 <!-- Why a Destination Wedding -->
