--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="rsvp-section content-section">
             <div class="container">
                 <h2>RSVP</h2>
-                Use the below form to send an email to Allison and Brandon and RSVP for the wedding.
+                Use the below form below to let Allison and Brandon know you're coming!
                 <br><br>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
   <p><i>Your email address<br><input type="email" name="email" style="color: black">
@@ -187,7 +187,7 @@
   <br><br>Name of each guest (including you!)</i><br><textarea name="message" style="color: black;width: 240px"></textarea>
   <br><br><button type="submit" class="button">SEND</button>
 </form>
-If you have any questions about the wedding, feel free to send us an email at <a href="mailto:allisonebrandon@gmail.com">allisonebrandon@gmail.com</a>.
+If you have any questions about the wedding, feel free to send <a href="mailto:allisonebrandon@gmail.com">Allison</a> or <a href="mailto:bmwexler@gmail.com">Brandon</a> an email.
 </div>
 </div>  <!-- end of row -->
 </section>
@@ -199,7 +199,7 @@ If you have any questions about the wedding, feel free to send us an email at <a
 <h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
 <p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
-<p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
+<p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until 2019. You may call the phone number listed above to be notified when booking for summer 2019 become available.
   <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
 
   <h3>Other Loding Options</h3>
@@ -216,7 +216,7 @@ If you have any questions about the wedding, feel free to send us an email at <a
       <br>Dollar (406) 892-0009 | Avis (406) 257-2727 | Enterprise (406) 755-4848
         <br>Hertz (406) 863-1210 | Budget (406) 755-7500 | Thrifty (406) 257-7333
     <p>TAXI SERVICE
-      <br>Glacier Taxt<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
+      <br>Glacier Taxi<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
 
 </div>
 </div>  <!-- end of row -->
