--- a/index.html
+++ b/index.html
@@ -223,6 +223,29 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 </div>
 </section>
 
+<!-- Things to Do Section -->
+<section id="thingstodo" class="text-center">
+    <div class="rsvp-section content-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+            <h1>Things To Do</h1>
+          </div>
+          </div>
+          <div class="row">
+            <div class="col-sm">
+              <h2>Whitefish Mountain Resort</h2>
+              <p>TEST</p>
+            </div>
+            <div class="col-sm">
+              <h2>Glacier National Park</h2>
+              <p>TEST</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      </section>
+
     <!-- Footer -->
     <footer>
         <div class="container text-center" style="color: black">
