--- a/index.html
+++ b/index.html
@@ -238,32 +238,23 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
               <p>
                 <b>Zip Line Tours</b>
                 <br>
-                Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor. If the exhilaration doesn’t take your breath away, the views will. Tours are led by two guides who ensure that each flyer is soundly secured for each flight and who facilitate fun from start to finish.
+                Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor.
                 <br><br>
                 <b>Aerial Adventure Park</b>
                 <br>
-                We call it “the happy place” because we see so many people overjoyed with excitement and a sense of accomplishment here. We also call it “an obstacle course in the trees” because there are five courses of various ability levels, each featuring different elements for getting from tree to tree. Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more. The park is a great activity for families, friends and team building.
-                <br><br>
-                <b>Spider Monkey Mountain</b>
-                <br>
-                Spider Monkey Mountain allows children to challenge themselves as they find their own way up through and out of a webbed tower. Kids 4 and older can climb through four webbed floors, two stories up, and upon reaching the top can either slide down the giant slide or climb back down through the webbing.
+                Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more.
                 <br><br>
                 <b>Summit Nature Center</b>
                 <br>
-                A must do for families at the summit is to visit the Summit Nature Center. Operated and staffed by the Flathead National Forest, families love to visit the Summit Nature Center to learn about our forest and its local flora and fauna.
+                Operated and staffed by the Flathead National Forest, people love to visit the Summit Nature Center to learn about the forest and its local flora and fauna.
                 <br><br>
                 <b>Mountain Biking</b>
                 <br>
                 Ride more than 30 miles of lift-accessed and cross-country mountain bike trails above the Flathead Valley.
-                <br><br>In Whitefish, we go with the flow. Our laid back vibe is one of the reasons why people keep coming back. That and the other relaxing characteristics: our lazy meandering river, pours of locally-brewed beers and community full of easy-going locals. Even our bike trails have flow. It's a term that often describes mountain bike trails. The way they are carved into a mountain in harmony with its contours for a smooth ride so you can, well, go with the flow.
                 <br><br>
                 <b>Alpine Slide</b>
                 <br>
-                Take sliding to a whole new level on the Alpine Slide. Ride a sled one-third mile down dips, around banked turns, under bridges, and through a tunnel while controlling speed with a hand brake. Each lap down the slide includes a free chairlift on Chair 6 back to the top of the slide. The Alpine Slide is fun for all ages, from 1 to 101.
-                <br><br>
-                <b>Strider Bike Park</b>
-                <br>
-                Aspiring mountain bikers ages 2 to 6 will love practicing their balance and riding skills on pedal-less bikes through the new Strider Bike Park located next to the Base Lode patio. Strider Balance Bikes break down the basics of learning how to ride into a safe and natural progression. With feet safely on the ground, a rider is easily able to maneuver and ride the lightweight bike around the track with berms and rollers.
+                Take sliding to a whole new level on the Alpine Slide. Ride a sled one-third mile down dips, around banked turns, under bridges, and through a tunnel while controlling speed with a hand brake.
                 <br><br>
                 <b>Scenic Lift Rides</b>
                 <br>
@@ -271,8 +262,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 <br><br>
                 <b>Hiking</b>
                 <br>
-                One of the most relaxing and rewarding summer mountain experiences is taking a hike. Whether you are looking for a multi-hour trek or an unhurried wander in the woods, our trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
-                <br><br>Our lower mountain trails are located on lands owned by the resort; however, the largest share of the mountain is part of the Flathead National Forest. All of our trails take you through forests consisting of Douglas fir, western larch, spruce, and fir trees as well as a variety of wildflowers. In late summer, plentiful huckleberries grow on the mountainsides and make for a delicious snack during your hike.
+                Whether you are looking for a multi-hour trek or an unhurried wander in the woods, Whitefish's trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
               </p>
             </div>
             <div class="col-md-6">
