--- a/index.html
+++ b/index.html
@@ -278,20 +278,20 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 <br><br><b>Visitor Centers</b>
                 <br><i>Apgar Visitor Center</i>
                 <br>
-                Apgar Visitor Center is located 2 miles east of the West Glacier entrance to the park. Rangers are on duty to assist with trip planning. The visitor center is the hub for the Going-to-the-Sun Road free shuttle system on the west side of the park. The visitor center is generally open daily from mid-May through September. Plus weekends only in winter.
+                Apgar Visitor Center is located 2 miles east of the West Glacier entrance to the park. Rangers are on duty to assist with trip planning. The visitor center is the hub for the Going-to-the-Sun Road free shuttle system on the west side of the park.
                 <br><br><i>Logan Pass Visitor Center</i>
                 <br>
-                The Logan Pass Visitor Center sits atop the Continental Divide at 6,646 feet. The visitor center houses exhibits on the plants and animals found in the sub-alpine region of the park. Numerous exhibits outside the visitor center tell the story of geology, climate change, and life in the harsh alpine world above treeline. Logan Pass is perhaps the most crowded location in the park with the parking lot filling to capacity early in the morning. Plan to arrive early or visit later in the afternoon.
+                The Logan Pass Visitor Center sits atop the Continental Divide at 6,646 feet. The visitor center houses exhibits on the plants and animals found in the sub-alpine region of the park. Numerous exhibits outside the visitor center tell the story of geology, climate change, and life in the harsh alpine world above treeline.
 
                 <br><br><i>St. Mary Visitor Center</i>
                 <br>
-                The St. Mary Visitor Center is located just inside the east entrance of the park near the community of St. Mary, Montana. Rangers are on duty inside to assist with trip planning. A park film is shown throughout the day. Exhibits highlight the rich Native American history associated with Glacier National Park.
+                The St. Mary Visitor Center is located just inside the east entrance of the park near the community of St. Mary, Montana. A park film is shown throughout the day. Exhibits highlight the rich Native American history associated with Glacier National Park.
                 <br><br>
                 <b>Hiking the Trails</b>
                 <br>With 734 miles to choose from, there is something for everyone. Use these resources to pick what hike is right for. Link includes trail maps.
                 <br><br>
                 <b>Ranger-led Programs</b>
-                <br>Our scheduled activities include a variety of ranger-led programs, from easy walks and evening talks, to all-day hikes and boat tours.
+                <br>Scheduled activities include a variety of ranger-led programs, from easy walks and evening talks, to all-day hikes and boat tours.
                 <br><br><b>Guided Tours</b>
                 <br>Rangers are not the only naturalists that lead groups in the park. Check out the tour options offered by park concessions.
                 <br><br><b>Going-to-the-sun Road</b>
