--- a/index.html
+++ b/index.html
@@ -269,10 +269,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
               <h2>Glacier National Park</h2>
               <p>
                 <b>Entrance Fees</b>
-                <br><i>Entrance fee by car - 7 day permit - $35.00</i>
-                <br>This is a entrance fee for all persons traveling in a single, private, non-commercial vehicle (car/truck/van). The permit is non-transferable. Visitors can enter the park at any time, if the entrance station is not staffed, a self-registration area is available for purchasing a 7-day park permit.
-                <br><br><i>Entrance Fee by single entry - $20.00</i>
-                <br>This is a per person entrance fee for a visitor traveling on foot, bicycle, or for individuals traveling together in a vehicle as a non-commercial, organized group. The permit is non-transferable.
+                <br>Entrance fee by car (7 day permit): $35.00; entrance fee by single entry - $20.00
                 <br><br><b>Visitor Centers</b>
                 <br><i>Apgar Visitor Center</i>
                 <br>
@@ -280,7 +277,6 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 <br><br><i>Logan Pass Visitor Center</i>
                 <br>
                 The Logan Pass Visitor Center sits atop the Continental Divide at 6,646 feet. The visitor center houses exhibits on the plants and animals found in the sub-alpine region of the park. Numerous exhibits outside the visitor center tell the story of geology, climate change, and life in the harsh alpine world above treeline.
-
                 <br><br><i>St. Mary Visitor Center</i>
                 <br>
                 The St. Mary Visitor Center is located just inside the east entrance of the park near the community of St. Mary, Montana. A park film is shown throughout the day. Exhibits highlight the rich Native American history associated with Glacier National Park.
@@ -294,12 +290,10 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 <br>Rangers are not the only naturalists that lead groups in the park. Check out the tour options offered by park concessions.
                 <br><br><b>Going-to-the-sun Road</b>
                 <br>A quintessential part of any Glacier visit, Going-to-the-Sun Road connects the east and west sides through the middle of the park.
-                <br><br><b>Camping</b>
+                <br><br><b>Camping, Biking, and Fishing</b>
                 <br>Enjoy the crackling of a campfire and sleep under the stars. With 13 campgrounds and 1,009 sites to choose from, options are plentiful.
-                <br><br><b>Biking</b>
-                <br>Learn the rules for biker access on Going-to-the-Sun Road and other opportunities available to cyclists.
-                <br><br><b>Fishing</b>
-                <br>No license is needed to fish in the park, but you do need to know the many rules and limits, which vary with each body of water.
+                <br><br>Learn the rules for biker access on Going-to-the-Sun Road and other opportunities available to cyclists.
+                <br><br>No license is needed to fish in the park, but you do need to know the many rules and limits, which vary with each body of water.
                 <br><br>Read Things to do in Glacier with children (pdf) to find out about family friendly trails and to get more ideas about activities children might enjoy while in Glacier.
                 <br><br>Visit the Glacier Institute website to find out about their summer family programs and summer camps for children.
 
