--- a/index.html
+++ b/index.html
@@ -237,32 +237,23 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
               <h2>Whitefish Mountain Resort</h2>
               <p>
                 <b>Zip Line Tours</b>
-                <br>
-                Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor.
-                <br><br>
+                <br>Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor. If the exhilaration doesn’t take your breath away, the views will. Tours are led by two guides who ensure that each flyer is soundly secured for each flight and who facilitate fun from start to finish.                <br><br>
                 <b>Aerial Adventure Park</b>
-                <br>
-                Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more.
-                <br><br>
+                <br>We call it “the happy place” because we see so many people overjoyed with excitement and a sense of accomplishment here. We also call it “an obstacle course in the trees” because there are five courses of various ability levels, each featuring different elements for getting from tree to tree. Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more. The park is a great activity for families, friends and team building.                <br><br>
                 <b>Summit Nature Center</b>
-                <br>
-                Operated and staffed by the Flathead National Forest, people love to visit the Summit Nature Center to learn about the forest and its local flora and fauna.
-                <br><br>
+                <br>A must do for families at the summit is to visit the Summit Nature Center. Operated and staffed by the Flathead National Forest, families love to visit the Summit Nature Center to learn about our forest and its local flora and fauna.                <br><br>
                 <b>Mountain Biking</b>
-                <br>
-                Ride more than 30 miles of lift-accessed and cross-country mountain bike trails above the Flathead Valley.
+                <br>Ride more than 30 miles of lift-accessed and cross-country mountain bike trails above the Flathead Valley.
+                <br>In Whitefish, we go with the flow. Our laid back vibe is one of the reasons why people keep coming back. That and the other relaxing characteristics: our lazy meandering river, pours of locally-brewed beers and community full of easy-going locals. Even our bike trails have flow. It's a term that often describes mountain bike trails. The way they are carved into a mountain in harmony with its contours for a smooth ride so you can, well, go with the flow.
                 <br><br>
                 <b>Alpine Slide</b>
-                <br>
-                Take sliding to a whole new level on the Alpine Slide. Ride a sled one-third mile down dips, around banked turns, under bridges, and through a tunnel while controlling speed with a hand brake.
-                <br><br>
+                <br>Take sliding to a whole new level on the Alpine Slide. Ride a sled one-third mile down dips, around banked turns, under bridges, and through a tunnel while controlling speed with a hand brake. Each lap down the slide includes a free chairlift on Chair 6 back to the top of the slide. The Alpine Slide is fun for all ages, from 1 to 101.                <br><br>
                 <b>Scenic Lift Rides</b>
-                <br>
-                Ranked #1 among Whitefish attractions on Trip Advisor, Scenic Lift Rides are a must-do in the summer. Choose from an enclosed gondola or an open chairlift, then sit back and enjoy the mountain scenery as well as views of Whitefish Lake, the Flathead Valley and Glacier National Park on the ride to the summit. Once at the summit, enjoy 360-degree views before returning down the mountain, or spend some time at the Summit House in the full cafeteria-style restaurant and bar or in the Summit Nature Center.
+                <br>Ranked #1 among Whitefish attractions on Trip Advisor, Scenic Lift Rides are a must-do in the summer. Choose from an enclosed gondola or an open chairlift, then sit back and enjoy the mountain scenery as well as views of Whitefish Lake, the Flathead Valley and Glacier National Park on the ride to the summit. Once at the summit, enjoy 360-degree views before returning down the mountain, or spend some time at the Summit House in the full cafeteria-style restaurant and bar or in the Summit Nature Center.
                 <br><br>
                 <b>Hiking</b>
-                <br>
-                Whether you are looking for a multi-hour trek or an unhurried wander in the woods, Whitefish's trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
+                <br>One of the most relaxing and rewarding summer mountain experiences is taking a hike. Whether you are looking for a multi-hour trek or an unhurried wander in the woods, our trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
+                Our lower mountain trails are located on lands owned by the resort; however, the largest share of the mountain is part of the Flathead National Forest. All of our trails take you through forests consisting of Douglas fir, western larch, spruce, and fir trees as well as a variety of wildflowers. In late summer, plentiful huckleberries grow on the mountainsides and make for a delicious snack during your hike.
               </p>
             </div>
             <div class="col-md-6">
