--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </section>
 
     <!-- Wedding Details Section -->
-    <section id="weddingdetails" class="download-section text-center">
+    <section id="weddingdetails" class="rsvp-section text-center">
             <div class="container">
               <div class="row">
                     <h1>Wedding Details</h1>
