--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                     <li>
                         <a class="page-scroll" href="#Accommodations">Accommodations</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#thingstodo">Things to Do</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
