--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <a class="page-scroll" href="#RSVP">RSVP</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Accommodations">Accommodations</a>
+                        <a class="page-scroll" href="#accommodations">Accommodations</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#thingstodo">Things to Do</a>
