--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 <!-- Things to Do Section -->
 <section id="thingstodo" class="text-center">
-    <div class="rsvp-section content-section">
+    <div class="thingstodo-section content-section">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
