--- a/index.html
+++ b/index.html
@@ -223,6 +223,69 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 </div>
 </div>  <!-- end of row -->
 </div>
+<div class="row">
+  <div class="col-md-12">
+  <h1>Things To Do</h1>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Whitefish Mountain Resort</h2>
+    <p>
+      <b>Zip Line Tours</b>
+      <br>Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor. Tours are led by two guides who ensure that each flyer is soundly secured for each flight and who facilitate fun from start to finish.                <br><br>
+      <b>Aerial Adventure Park</b>
+      <br>We call it “the happy place” because we see so many people overjoyed with excitement and a sense of accomplishment here. We also call it “an obstacle course in the trees” because there are five courses of various ability levels, each featuring different elements for getting from tree to tree. Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more. The park is a great activity for families, friends and team building.                <br><br>
+      <b>Summit Nature Center</b>
+      <br>A must do for families at the summit is to visit the Summit Nature Center. Operated and staffed by the Flathead National Forest, families love to visit the Summit Nature Center to learn about our forest and its local flora and fauna.                <br><br>
+      <b>Mountain Biking</b>
+      <br>Ride more than 30 miles of lift-accessed and cross-country mountain bike trails above the Flathead Valley.
+      <br>In Whitefish, we go with the flow. Our laid back vibe is one of the reasons why people keep coming back. That and the other relaxing characteristics: our lazy meandering river, pours of locally-brewed beers and community full of easy-going locals. Even our bike trails have flow. It's a term that often describes mountain bike trails. The way they are carved into a mountain in harmony with its contours for a smooth ride so you can, well, go with the flow.
+      <br><br>
+      <b>Alpine Slide</b>
+      <br>Take sliding to a whole new level on the Alpine Slide. Ride a sled one-third mile down dips, around banked turns, under bridges, and through a tunnel while controlling speed with a hand brake. Each lap down the slide includes a free chairlift on Chair 6 back to the top of the slide. The Alpine Slide is fun for all ages, from 1 to 101.                <br><br>
+      <b>Scenic Lift Rides</b>
+      <br>Ranked #1 among Whitefish attractions on Trip Advisor, Scenic Lift Rides are a must-do in the summer. Choose from an enclosed gondola or an open chairlift, then sit back and enjoy the mountain scenery as well as views of Whitefish Lake, the Flathead Valley and Glacier National Park on the ride to the summit. Once at the summit, enjoy 360-degree views before returning down the mountain, or spend some time at the Summit House in the full cafeteria-style restaurant and bar or in the Summit Nature Center.
+      <br><br>
+      <b>Hiking</b>
+      <br>Whether you are looking for a multi-hour trek or an unhurried wander in the woods, our trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
+    </p>
+  </div>
+  <div class="col-md-6">
+    <h2>Glacier National Park</h2>
+    <p>
+      <b>Entrance Fees</b>
+      <br>Entrance fee by car (7 day permit): $35.00; entrance fee by single entry - $20.00
+      <br><br><b>Visitor Centers</b>
+      <br><i>Apgar Visitor Center</i>
+      <br>
+      Apgar Visitor Center is located 2 miles east of the West Glacier entrance to the park. Rangers are on duty to assist with trip planning. The visitor center is the hub for the Going-to-the-Sun Road free shuttle system on the west side of the park.
+      <br><br><i>Logan Pass Visitor Center</i>
+      <br>
+      The Logan Pass Visitor Center sits atop the Continental Divide at 6,646 feet. The visitor center houses exhibits on the plants and animals found in the sub-alpine region of the park.
+      <br><br><i>St. Mary Visitor Center</i>
+      <br>
+      The St. Mary Visitor Center is located just inside the east entrance of the park near the community of St. Mary, Montana. A park film is shown throughout the day. Exhibits highlight the rich Native American history associated with Glacier National Park.
+      <br><br>
+      <b>Hiking the Trails</b>
+      <br>With 734 miles to choose from, there is something for everyone. Use these resources to pick what hike is right for. Link includes trail maps.
+      <br><br>
+      <b>Ranger-led Programs</b>
+      <br>Scheduled activities include a variety of ranger-led programs, from easy walks and evening talks, to all-day hikes and boat tours.
+      <br><br><b>Guided Tours</b>
+      <br>Rangers are not the only naturalists that lead groups in the park. Check out the tour options offered by park concessions.
+      <br><br><b>Going-to-the-sun Road</b>
+      <br>A quintessential part of any Glacier visit, Going-to-the-Sun Road connects the east and west sides through the middle of the park.
+      <br><br><b>Camping, Biking, and Fishing</b>
+      <br>Enjoy the crackling of a campfire and sleep under the stars. With 13 campgrounds and 1,009 sites to choose from, options are plentiful.
+      <br><br>Learn the rules for biker access on Going-to-the-Sun Road and other opportunities available to cyclists.
+      <br><br>No license is needed to fish in the park, but you do need to know the many rules and limits, which vary with each body of water.
+      <br><br>Read Things to do in Glacier with children (pdf) to find out about family friendly trails and to get more ideas about activities children might enjoy while in Glacier.
+      <br><br>Visit the Glacier Institute website to find out about their summer family programs and summer camps for children.
+
+    </p>
+  </div>
+</div>
 </section>
 
 <!-- Things to Do Section -->
@@ -239,7 +302,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
               <h2>Whitefish Mountain Resort</h2>
               <p>
                 <b>Zip Line Tours</b>
-                <br>Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor. If the exhilaration doesn’t take your breath away, the views will. Tours are led by two guides who ensure that each flyer is soundly secured for each flight and who facilitate fun from start to finish.                <br><br>
+                <br>Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor. Tours are led by two guides who ensure that each flyer is soundly secured for each flight and who facilitate fun from start to finish.                <br><br>
                 <b>Aerial Adventure Park</b>
                 <br>We call it “the happy place” because we see so many people overjoyed with excitement and a sense of accomplishment here. We also call it “an obstacle course in the trees” because there are five courses of various ability levels, each featuring different elements for getting from tree to tree. Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more. The park is a great activity for families, friends and team building.                <br><br>
                 <b>Summit Nature Center</b>
@@ -254,7 +317,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 <br>Ranked #1 among Whitefish attractions on Trip Advisor, Scenic Lift Rides are a must-do in the summer. Choose from an enclosed gondola or an open chairlift, then sit back and enjoy the mountain scenery as well as views of Whitefish Lake, the Flathead Valley and Glacier National Park on the ride to the summit. Once at the summit, enjoy 360-degree views before returning down the mountain, or spend some time at the Summit House in the full cafeteria-style restaurant and bar or in the Summit Nature Center.
                 <br><br>
                 <b>Hiking</b>
-                <br>One of the most relaxing and rewarding summer mountain experiences is taking a hike. Whether you are looking for a multi-hour trek or an unhurried wander in the woods, our trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
+                <br>Whether you are looking for a multi-hour trek or an unhurried wander in the woods, our trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
               </p>
             </div>
             <div class="col-md-6">
@@ -268,7 +331,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 Apgar Visitor Center is located 2 miles east of the West Glacier entrance to the park. Rangers are on duty to assist with trip planning. The visitor center is the hub for the Going-to-the-Sun Road free shuttle system on the west side of the park.
                 <br><br><i>Logan Pass Visitor Center</i>
                 <br>
-                The Logan Pass Visitor Center sits atop the Continental Divide at 6,646 feet. The visitor center houses exhibits on the plants and animals found in the sub-alpine region of the park. Numerous exhibits outside the visitor center tell the story of geology, climate change, and life in the harsh alpine world above treeline.
+                The Logan Pass Visitor Center sits atop the Continental Divide at 6,646 feet. The visitor center houses exhibits on the plants and animals found in the sub-alpine region of the park.
                 <br><br><i>St. Mary Visitor Center</i>
                 <br>
                 The St. Mary Visitor Center is located just inside the east entrance of the park near the community of St. Mary, Montana. A park film is shown throughout the day. Exhibits highlight the rich Native American history associated with Glacier National Park.
