--- a/index.html
+++ b/index.html
@@ -194,41 +194,9 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 </div>  <!-- end of row -->
 </section>
 
-<!-- Accomodations Section -->
-    <section id="accommodations" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2" style="color: black">
-<h1>Accommodations</h1>
-<h3>Whitefish Mountain Resort</h3>
-<p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
-<p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until 2019. You may call the phone number listed above to be notified when booking for summer 2019 become available.
-  <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
-
-  <h3>Other Loding Options</h3>
-  <p>Best Western Rocky Mountain Lodge | Hampton Inn & Suites Whitefish | Pine Lodge | Airbnb
-  <br><br><i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
-
-    <h3>Area Shuttle Service</h3>
-        <p>GLACIER PARK EXPRESS
-          <br>Service between Whitefish Mountain Resort, the town of Whitefish, and Glacier National Park. Trips between Whitefish and Whitefish Mountain Resort are free. Trips to Glacier Park are $10 per person or $5 for kids</p>
-      <p>WHITEFISH MOUNTAIN RESORT VILLAGE SHUTTLE
-        <br>
-        Complimentary to Whitefish Mountain Resort Lodging guests to various locations around the resort. This shuttle does not go into the town of Whitefish.</p>
-    <p>RENTAL CAR COMPANIES
-      <br>Dollar (406) 892-0009 | Avis (406) 257-2727 | Enterprise (406) 755-4848
-        <br>Hertz (406) 863-1210 | Budget (406) 755-7500 | Thrifty (406) 257-7333
-    <p>TAXI SERVICE
-      <br>Glacier Taxi<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
-
-</div>
-</div>  <!-- end of row -->
-</div>
-
-</section>
-
 <!-- Things to Do Section -->
 <section id="thingstodo" class="text-center">
-    <div class="thingstodo-section content-section">
+    <div class="rsvp-section content-section">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
@@ -297,6 +265,38 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
       </div>
       </section>
 
+
+<!-- Accomodations Section -->
+    <section id="accommodations" class="container content-section thingstodo-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2" style="color: black">
+<h1>Accommodations</h1>
+<h3>Whitefish Mountain Resort</h3>
+<p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
+<p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until 2019. You may call the phone number listed above to be notified when booking for summer 2019 become available.
+  <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
+
+  <h3>Other Loding Options</h3>
+  <p>Best Western Rocky Mountain Lodge | Hampton Inn & Suites Whitefish | Pine Lodge | Airbnb
+  <br><br><i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
+
+    <h3>Area Shuttle Service</h3>
+        <p>GLACIER PARK EXPRESS
+          <br>Service between Whitefish Mountain Resort, the town of Whitefish, and Glacier National Park. Trips between Whitefish and Whitefish Mountain Resort are free. Trips to Glacier Park are $10 per person or $5 for kids</p>
+      <p>WHITEFISH MOUNTAIN RESORT VILLAGE SHUTTLE
+        <br>
+        Complimentary to Whitefish Mountain Resort Lodging guests to various locations around the resort. This shuttle does not go into the town of Whitefish.</p>
+    <p>RENTAL CAR COMPANIES
+      <br>Dollar (406) 892-0009 | Avis (406) 257-2727 | Enterprise (406) 755-4848
+        <br>Hertz (406) 863-1210 | Budget (406) 755-7500 | Thrifty (406) 257-7333
+    <p>TAXI SERVICE
+      <br>Glacier Taxi<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
+
+</div>
+</div>  <!-- end of row -->
+</div>
+
+</section>
     <!-- Footer -->
     <footer>
         <div class="container text-center" style="color: black">
