--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
 
     <!-- RSVP Section -->
-    <section id="RSVP" class="text-center">
-        <div class="rsvp-section content-section">
+    <section id="RSVP">
+        <div class="container content-section text-center">
             <div class="container">
                 <h2>RSVP</h2>
                 Use the below form below to let Allison and Brandon know you're coming!
@@ -267,7 +267,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 
 <!-- Accomodations Section -->
-    <section id="accommodations" class="container content-section thingstodo-section text-center">
+    <section id="accommodations" class="container thingstodo-section content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2" style="color: black">
 <h1>Accommodations</h1>
