--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <!-- RSVP Section -->
     <section id="RSVP">
-        <div class="container content-section text-center">
+        <div class="container rsvp-section content-section text-center">
             <div class="container">
                 <h2>RSVP</h2>
                 Use the below form below to let Allison and Brandon know you're coming!
