--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <!-- RSVP Section -->
     <section id="RSVP">
-        <div class="container rsvp-section content-section text-center">
+        <div class="rsvp-section content-section text-center">
             <div class="container">
                 <h2>RSVP</h2>
                 Use the below form below to let Allison and Brandon know you're coming!
@@ -196,7 +196,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 <!-- Things to Do Section -->
 <section id="thingstodo" class="text-center">
-    <div class="rsvp-section content-section">
+    <div class="content-section">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
