--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 
 <!-- Accomodations Section -->
-    <section id="accommodations" class="container thingstodo-section content-section text-center">
+    <section id="accommodations" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2" style="color: black">
+            <div class="col-lg-8 col-lg-offset-2">
 <h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
 <p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
