--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <section id="RSVP">
         <div class="rsvp-section content-section text-center">
             <div class="container">
-                <h2>RSVP</h2>
+                <font color="black"><h2>RSVP</h2>
                 Use the below form below to let Allison and Brandon know you're coming!
                 <br><br>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
@@ -190,8 +190,9 @@
   <br><br><button type="submit" class="button">SEND</button>
 </form>
 If you have any questions about the wedding, feel free to send <a href="mailto:allisonebrandon@gmail.com">Allison</a> or <a href="mailto:bmwexler@gmail.com">Brandon</a> an email.
+</font>
 </div>
-</div>  <!-- end of row -->
+</div>
 </section>
 
 <!-- Things to Do Section -->
