--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <section id="RSVP">
         <div class="rsvp-section content-section text-center">
             <div class="container">
-                <font color="black"><h2>RSVP</h2>
+                <h2>RSVP</h2>
                 Use the below form below to let Allison and Brandon know you're coming!
                 <br><br>
                   <form method="POST" action="https://formspree.io/allisonebrandon@gmail.com">
@@ -190,7 +190,6 @@
   <br><br><button type="submit" class="button">SEND</button>
 </form>
 If you have any questions about the wedding, feel free to send <a href="mailto:allisonebrandon@gmail.com">Allison</a> or <a href="mailto:bmwexler@gmail.com">Brandon</a> an email.
-</font>
 </div>
 </div>
 </section>
@@ -201,6 +200,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
         <div class="container">
           <div class="row">
             <div class="col-md-12">
+              <font color="black">
             <h1>Things To Do</h1>
           </div>
         </div>
@@ -258,7 +258,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 <br><br>No license is needed to fish in the park, but you do need to know the many rules and limits, which vary with each body of water.
                 <br><br>Read Things to do in Glacier with children (pdf) to find out about family friendly trails and to get more ideas about activities children might enjoy while in Glacier.
                 <br><br>Visit the Glacier Institute website to find out about their summer family programs and summer camps for children.
-
+</font>
               </p>
             </div>
           </div>
