--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 
 <!-- Accomodations Section -->
-    <section id="accommodations" class="container thingstodo-section content-section text-center">
+    <section id="accommodations" class="thingstodo-section container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
 <h1>Accommodations</h1>
