--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 
 <!-- Accomodations Section -->
-    <section id="accommodations" class="thingstodo-section content-section text-center">
-        <div class="row container">
+    <section id="accommodations" class="thingstodo-section content-section">
+        <div class="row container text-center">
             <div class="col-lg-8 col-lg-offset-2">
 <h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
