--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 <!-- Accomodations Section -->
     <section id="accommodations" class="thingstodo-section content-section">
-        <div class="row container text-center">
+        <div class="row container">
             <div class="col-lg-8 col-lg-offset-2">
+              <center>
 <h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
 <p><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA | <b>Phone:</b> 800-858-4152</p>
@@ -292,7 +293,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
         <br>Hertz (406) 863-1210 | Budget (406) 755-7500 | Thrifty (406) 257-7333
     <p>TAXI SERVICE
       <br>Glacier Taxi<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
-
+</center>
 </div>
 </div>  <!-- end of row -->
 </div>
